<resources>
    <string name="NoHiHanEntitats">Doesn\'t found entities for your setting country</string>
    <string name="error_CampObligatori">Required field</string>
    <string name="error_NoEventDate">Requeired event date</string>
    <string name="error_eMailIncorrecte">Invalid mail</string>
    <string name="error_Layout">There are some wrong field</string>
    <string name="error_CapacitatSuperada">Capacity exceeded</string>
    <string name="error_LimitCapacitat">Limit capacity</string>
    <string name="llista_Select">Select...</string>
    <string name="llista_Select_pais">Select entity for country...</string>
    <string name="nomes_invitacio">only invitation</string>
    <string name="op_modificacio_ok">Update done</string>
    <string name="op_afegir_ok">Added item</string>
    <string name="op_esborrar_ok">Deleted item</string>
    <string name="op_acceptar_invitacio">Accept invitacion</string>
    <string name="op_rebutjar_invitacio">Rejected invitacion</string>
    <string name="boto_Acceptar">Accept</string>
    <string name="boto_Cancelar">Cancel</string>
    <string name="Seleccionar">Select</string>
    <string name="Acceptar">Accept</string>
    <string name="Esborrar">Drop</string>
    <string name="Tria_Mail">Choose an Email client :</string>
    <string name="Subject_Invitació">Dear customer, I want an invitation for you</string>
    <string name="Carregant">Loading</string>
    <string name="Esperi">Please wait...</string>
    <string name="EntitatBaixa">(ENTITY CANCELLED)</string>
    <string name="AssociacioPendent">(pending)</string>
    <string name="AssociacioBaixa">(associacion cancelled)</string>
    <string name="AssociacioPeticioBaixa">(request associacion cancelled)</string>
    <string name="AssociacioRebutjada">(request rejected)</string>
    <string name="DataAlta">Entry date</string>
    <string name="DataPeticio">Request date</string>
    <string name="DataBaixa">Leaving date</string>
    <string name="DataRebutjat">Rejected date</string>
    <string name="TeAssociacioActiva">Dear customer, you already have an association with this entity.</string>
    <string name="TeAssociacioPendent">Dear customer, you have a pending association with this entity.</string>
    <string name="Ordenacio">Order by:</string>
    <string name="CelebracioBaixa">(EVENT CANCELLED)</string>
    <string name="meters">meters</string>
    <string name="Distancia">Distance</string>
    <string name="OK">OK</string>
    <string name="Text">text...</string>
    <string name="Maxim">max</string>
    <string name="esborrat">-erase-</string>
    <string name="error_avis">Alert</string>
    <string name="error_greu">Error</string>
    <string name="errorservidor_noAcces">Unable to acces to server. Retry later</string>
    <string name="errorservidor_BBDD">Error at server. Retry later</string>
    <string name="errorservidor_ProgramError">An error has ocurred. Retry again</string>
    <string name="errorservidor_Mail">An error has ocurred sending confirmation e-mail.</string>
    <string name="errorlocal_BBDD">Error at database. Retry later</string>
    <string name="errorlocal_ProgramError">An error has ocurred. Retry again</string>
    <string name="error_RequereixInvitació">only works with invitation. You must Contact with them.</string>
    <string name="app_name">Bodina</string>
    <string name="principalMNUentitats">Entities</string>
    <string name="principalMNUafegir">Add event</string>
    <string name="principalMNUCelebracionsClient">Client events</string>
    <string name="principalMNUconfiguracio">Settings</string>
    <string name="principalMNUTipusCelebracions">Types of events</string>
    <string name="principalMNUactualitzar">Refresh</string>
    <string name="configuracioTitol">Settings</string>
    <string name="configuracio_Nom">Name</string>
    <string name="configuracio_eMail">e-Mail</string>
    <string name="configuracio_Idioma">Language to comunicate</string>
    <string name="configuracio_Pais">Country</string>
    <string name="configuracio_Contacte">Contact</string>
    <string name="configuracio_UpdateDades">If communication active auto-sync info with server</string>
    <string name="configuracio_DataAlta">Entry date</string>
    <string name="title_activity_ac_entitat_pral">Entities</string>
    <string name="EntitatPralMNUSolicitarEntitat">Request entity</string>
    <string name="EntitatPralMNUOrdenarEntitats">Sort entities</string>
    <string name="EntitatPralMNUActualitzar">Refresh</string>
    <string name="title_activity_ac_entitat_alta">Append entity</string>
    <string name="title_activity_ac_entitat_recerca">From</string>
    <string name="EntitatRecerca_Recerca">Search...</string>
    <string name="EntitatRecerca_Pais">Country</string>
    <string name="title_activity_ac_entitat_solicitar">Request entity</string>
    <string name="EntitatSolicitar_Entitat">Entity</string>
    <string name="EntitatSolicitar_Descripcio">Description</string>
    <string name="EntitatSolicitar_Contacte">Contact</string>
    <string name="EntitatSolicitar_eMail">e-Mail</string>
    <string name="title_activity_ac_entitat_detall">Entity detail</string>
    <string name="EntitatDetall_Nom">Name</string>
    <string name="EntitatDetall_Adresa">Adress</string>
    <string name="EntitatDetall_Contacte">Contact</string>
    <string name="EntitatDetall_Telefon">Phone</string>
    <string name="EntitatDetall_eMail">e-Mail</string>
    <string name="EntitatDetall_Pais">Country</string>
    <string name="title_activity_entitat_modificar">Entity modify</string>
    <string name="EntitatModificar_Entitat">Entity</string>
    <string name="EntitatModificar_Descripcio">Description</string>
    <string name="EntitatModificar_Contacte">Contact</string>
    <string name="EntitatModificar_eMail">e-Mail</string>
    <string name="title_activity_celebracions_client">Clients events</string>
    <string name="CelebracionsClientPralMNUAfegir">Add event</string>
    <string name="CelebracionsClientPralMNUOrdenar">Sort events</string>
    <string name="CelebracionsClientPralMNUSalons">Saloons client</string>
    <string name="CelebracionsClientPralMNUTaules">Tables client</string>
    <string name="CelebracionsClientPralMNUActualitzar">Refresh</string>
    <string name="title_activity_CelebracionsClientMant">Clients events</string>
    <string name="CelebracionsClientMantTXTTipusCelebracio">Celebraction\'s type</string>
    <string name="CelebracionsClientMantTXTSalo">Saloon</string>
    <string name="CelebracionsClientMantTXTDescripcio">Description</string>
    <string name="CelebracionsClientMantTXTNumConvidats">Guest\'s number</string>
    <string name="CelebracionsClientMantTXTData">Date...</string>
    <string name="CelebracionsClientMantTXTHora">Hour...</string>
    <string name="CelebracionsClientMantTXTLloc">Place</string>
    <string name="CelebracionsClientMantTXTContacte">Contact</string>
    <string name="CelebracionsClientMantTXTDistribucions">Distributions</string>
    <string name="CelebracionsClientMantMNUAfegirDistribucio">Add distribution</string>
    <string name="CelebracionsClientMantLITEscalaUnitats"><![CDATA[<Scale>]]></string>
    <string name="title_activity_DistribucionsClientMant">Client distribution</string>
    <string name="DistribucionsClientMantTXTNom">Name</string>
    <string name="DistribucionsClientMantLABConfiguracio">Settings</string>
    <string name="DistribucionsClientMantLABConfiguracioTriaTaula">Choose table</string>
    <string name="DistribucionsClientMantDialogConfigCBXTaulaDefecte">Default table</string>
    <string name="DistribucionsClientMantDialogConfigTXTTaules">Tables</string>
    <string name="DistribucionsClientMantLABTaula">Table</string>
    <string name="DistribucionsClientMantLABMa">Tactile</string>
    <string name="DistribucionsClientMantLABAssistent">Assistant</string>
    <string name="DistribucionsClientMantDialogConfigCBXQuadricula">Quarter</string>
    <string name="DistribucionsClientMantDialogConfigCBXLiniesTaules">Table guidelines</string>
    <string name="DistribucionsClientMantDialogConfigCBXMostrarConvidats">Show guests</string>
    <string name="DistribucionsClientMantLABZoom">Zoom:</string>
    <string name="DistribucionsClientMantMNUMostrarComensals">View diners</string>
    <string name="DistribucionsClientMantMNUComensals">Diners</string>
    <string name="title_activity_celebracions_client_taula_comensals">diners</string>
    <string name="DistribucionsClientMantTaulaConvidatsLABAssistent">Assistant</string>
    <string name="DistribucionsClientMantTaulaConvidatsLABConfiguracio">Settings</string>
    <string name="DistribucionsClientMantTaulaConvidatsLABTaula">Table</string>
    <string name="title_activity_salons_client">Saloons client</string>
    <string name="SalonsClientPralMNUAfegir">Add saloon</string>
    <string name="SalonsClientPralMNUOrdenar">Sort saloon</string>
    <string name="SalonsClientPralMNUActualitzar">Refresh</string>
    <string name="SalonsClientPralLITCapacitat">Capacity</string>
    <string name="title_activity_salonsclient_modificacio">Modify saloon</string>
    <string name="title_activity_salonsclient_planol">Draw saloon</string>
    <string name="SalonsClientAltaTXTNom">Name</string>
    <string name="SalonsClientAltaTXTDescripcio">Description</string>
    <string name="SalonsClientAltaTXTCapacitat">Capacity</string>
    <string name="SalonsClientAltaLITAmplada">-with-</string>
    <string name="SalonsClientAltaLITAlsada">-height-</string>
    <string name="SalonsClientPlanolLABRecta">Line</string>
    <string name="SalonsClientPlanolLABCurva">Curve</string>
    <string name="SalonsClientPlanolLABTexte">Text</string>
    <string name="SalonsClientPlanolLABMa">Tactile</string>
    <string name="SalonsClientPlanolLABConfiguracio">Settings</string>
    <string name="SalonsClientPlanolLABAssistent">Assistant</string>
    <string name="SalonsClientPlanolLABEscala">Scale</string>
    <string name="SalonsClientPlanolLABUnitats">Units</string>
    <string name="SalonsClientPlanolTITAddTexte">Add text</string>
    <string name="SalonsClientPlanolTITModifyTexte">Modify text</string>
    <string name="SalonsClientPlanolDialogConfigCBXQuadricula">Quarter</string>
    <string name="SalonsClientPlanolDialogConfigTXTEscala">Scale</string>
    <string name="SalonsClientPlanolDialogConfigTXTUnitats">Units</string>
    <string name="error_PlanolNoTancat">The saloon must be closed</string>
    <string name="title_activity_ac_celebracio_alta">Append event</string>
    <string name="EntitatSolicitar_DataHora">Date/time</string>
    <string name="EntitatSolicitar_TipusCelebracio">Type event</string>
    <string name="EntitatSolicitar_Convidats">Guests</string>
    <string name="title_activity_categories_contactes">Contacts categories</string>
    <string name="categories_contactesMNUOrdenar">Sort categories</string>
    <string name="categories_contactesMNUAfegirTipus">Add category</string>
    <string name="categories_contactes_Afegir">Add category</string>
    <string name="categories_contactes_Modificar">Modifiy category</string>
    <string name="title_activity_categories_convidats">Guests categories</string>
    <string name="categories_convidatsMNUOrdenar">Sort categories</string>
    <string name="categories_convidatsMNUAfegirTipus">Add category</string>
    <string name="categories_convidats_Afegir">Add category</string>
    <string name="categories_convidats_Modificar">Modifiy category</string>
    <string name="title_activity_tipus_celebracions">Types of events</string>
    <string name="TaulesClientDialogMantTXTTipus">Table type</string>
    <string name="TaulesClientDialogTXTDescripcio">Description</string>
    <string name="TaulesClientDialogTXTMaxPersones">Max capacity</string>
    <string name="TaulesClientDialogTXTDiametre">Diameter</string>
    <string name="TaulesClientDialogTXTLlargada">long</string>
</resources>