<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".salons_client_planol">
    <item android:id="@+id/DistribucionsClientMantMNUAcceptar" android:title="@string/Acceptar"
        android:orderInCategory="101"
        android:icon="@drawable/ic_check_white_48dp"
        app:showAsAction="always" />
    <item android:id="@+id/DistribucionsClientMantMNUEsborrar" android:title="@string/Esborrar"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_white_36dp"
        app:showAsAction="always" />
    <item android:id="@+id/DistribucionsClientMantMNUVeureComensals" android:title="@string/DistribucionsClientMantMNUMostrarComensals"
        android:orderInCategory="102"
        android:checkable="true"
        app:showAsAction="never" />
    <group android:id="@+id/grp">
        <item android:id="@+id/DistribucionsClientMantMNUDinersa" android:title="@string/DistribucionsClientMantMNUComensals"
            android:orderInCategory="103"
            app:showAsAction="never" />
    </group>
</menu>