<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".entitat_pral">
    <item android:id="@+id/entitat_solicitarMNUDemanar"
        android:title="@string/EntitatPralMNUSolicitarEntitat"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/entitat_solicitarMNUOrdenar"
        android:title="@string/EntitatPralMNUOrdenarEntitats"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/entitat_solicitarMNUActualitzar"
        android:title="@string/EntitatPralMNUActualitzar"
        android:orderInCategory="103" app:showAsAction="never" />
</menu>