<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".salons_client_pral">
    <item android:id="@+id/salons_client_pralMNUAltaSalo"
        android:title="@string/SalonsClientPralMNUAfegir"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/salons_client_pralMNUOrdenar"
        android:title="@string/SalonsClientPralMNUOrdenar"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/salons_client_pralMNUActualitzar"
        android:title="@string/SalonsClientPralMNUActualitzar"
        android:orderInCategory="103" app:showAsAction="never" />
</menu>