<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TaulesClientDialogMantTXTTipus"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/TaulesClientDialogMantSPNTipus"
            android:spinnerMode="dropdown" />

    </FrameLayout>

    <EditText
        android:id="@+id/TaulesClientDialogMantTXTDescripcio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:hint="@string/TaulesClientDialogTXTDescripcio" />

    <EditText
        android:id="@+id/TaulesClientDialogMantTXTMaxPersones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/TaulesClientDialogTXTMaxPersones" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- El hint de aquest camp es en un principi radi perque tenim marcat inicialment el tipus rodo -->
        <EditText
            android:id="@+id/TaulesClientDialogMantTXTAmpladaDiametre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/TaulesClientDialogTXTDiametre" />

        <EditText
            android:id="@+id/TaulesClientDialogMantTXTLlargada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:inputType="number"
            android:hint="@string/TaulesClientDialogTXTLlargada" />
    </LinearLayout>
</LinearLayout>