<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".configuracio">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/configuracioETXnom"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/configuracio_Nom"
            android:ems="10"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/configuracioETXeMail"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/configuracio_eMail" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/configuracioTXTidioma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/configuracio_Idioma"/>

            <Spinner
                android:id="@+id/configuracioSPNidioma"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:spinnerMode="dialog" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/configuracioTXTpais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/configuracio_Pais"/>

            <Spinner
                android:id="@+id/configuracioSPNpais"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:spinnerMode="dialog" />

        </FrameLayout>

        <EditText
            android:id="@+id/configuracioETXContacte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/configuracio_Contacte"
            android:layout_marginTop="20dp" />

        <CheckBox
            android:id="@+id/configuracioCBXsincronitzacio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuracio_UpdateDades"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/configuracioTXTdataAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/configuracio_DataAlta"/>

            <TextView
                android:id="@+id/configuracioETXdataAlta"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>