<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/purple"
    tools:context=".ac_entitat_solicitar">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boto_Cancelar"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_esborrar"
            android:gravity="center_horizontal|center_vertical"
            android:id="@+id/btnCancelar" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boto_Acceptar"
            android:layout_weight="1"
            android:drawableRight="@drawable/abc_ic_search_api_mtrl_alpha"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/btnAcceptar"
            android:onClick="btnEntitatSolicitar_Acceptar"/>
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/EntitatSolicitar_Entitat"
                    android:id="@+id/litEntitatSolicitar_Entitat"/>

                <Spinner
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:id="@+id/spinnerEntitatSolicitar_Entitat"
                    android:background="@color/blue"
                    android:spinnerMode="dropdown"
                    android:popupBackground="@color/darkblue" />

                <Button
                    android:id="@+id/AspaProva"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical|right"
                    android:background="@drawable/ic_esborrar"
                    android:onClick="btnAfegirEntitatOnClick" />

            </FrameLayout>

            <EditText
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TexteEntitatSolicitar_Descripcio"
                android:hint="@string/EntitatSolicitar_Descripcio" />

            <EditText
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TexteEntitatSolicitar_Contacte"
                android:hint="@string/EntitatSolicitar_Contacte" />

            <EditText
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/TexteEntitatSolicitar_eMail"
                android:hint="@string/EntitatSolicitar_eMail" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

